--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@
         font-size: 15px;
         font-weight: 300;
         margin-left: 32%;
-        padding: 0px 11px 0px 13px;
+        padding: 0px 10px 0px 13px;
         
       }
       .rb {
@@ -76,11 +76,14 @@
         box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
       }
       #rb1 {
-        height: 20%;
+        margin-top: 0px;
+        background-color: #FFFF00;
       }
       #rb2 {
-        height: 20%;
+        background-color: #0000FF;
+        
       }
       #rb3 {
-        height: 20%;
+        background-color: #FF00FF;
+        
       }
